<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="adfit_ad_click_hint">"go to the advertiser's page"</string>
    <string name="adfit_ad_info_click_hint">go to the ad information page</string>
    <string name="adfit_ad_info_description">AD Info</string>
    <string name="adfit_error_play">The video can not be played.</string>
    <string name="adfit_iab_close">Close</string>
    <string name="adfit_iab_desc_for_refresh">Refresh</string>
    <string name="adfit_iab_desc_for_webview_error_message">This page cannot be found.</string>
    <string name="adfit_iab_go_back">Go Back</string>
    <string name="adfit_iab_go_forward">Go Forward</string>
    <string name="adfit_iab_label_error_message">This page cannot be found.</string>
    <string name="adfit_iab_label_for_request_web">Loading</string>
    <string name="adfit_iab_menu">Menu</string>
    <string name="adfit_iab_menu_copy">Copy Url</string>
    <string name="adfit_iab_menu_open_web">Open in Browser</string>
    <string name="adfit_iab_menu_reload">Refresh</string>
    <string name="adfit_iab_menu_share">Share via Other Apps</string>
    <string name="adfit_iab_url_copy">Link copied.</string>
    <string name="adfit_pause_btn_description">Advertisement pause</string>
    <string name="adfit_play_btn_description">Advertisement play</string>
    <string name="adfit_popup_option_close">닫기</string>
    <string name="adfit_popup_option_done_today">오늘 그만 보기</string>
    <string name="adfit_popup_option_exit">앱 종료를 누르면 앱이 종료됩니다.</string>
    <string name="adfit_refresh">Refresh</string>
    <string name="adfit_replay_btn_description">Advertisement replay</string>
    <string name="adfit_sound_off_description">Advertisement sound off</string>
    <string name="adfit_sound_on_description">Advertisement sound on</string>
    <string name="adrop_cta_apply">Apply</string>
    <string name="adrop_cta_book">Book</string>
    <string name="adrop_cta_contact">Contact</string>
    <string name="adrop_cta_go_now">Go Now</string>
    <string name="adrop_cta_install">Install</string>
    <string name="adrop_cta_learn_more">Learn More</string>
    <string name="adrop_cta_none">None</string>
    <string name="adrop_cta_order">Order</string>
    <string name="adrop_cta_purchase">Purchase</string>
    <string name="adrop_cta_sign_up">Sign Up</string>
    <string name="adrop_cta_view_details">View Details</string>
    <string name="adrop_cta_visit">Visit</string>
    <string name="adrop_popup_ad_close">Close</string>
    <string name="adrop_popup_ad_never_show_again_today">Hide for today</string>
    <string name="adrop_quest_loading_failed">Unable to load the page. Please check your network.</string>
    <string name="adrop_splash_ad_next_activity">com.artifyapp.timestamp.view.main.MainActivity</string>
    <string name="adrop_splash_ad_unit_id">01HZEB1TF8AGBYDB51TNXZM9DA</string>
    <string name="advanced_camera_settings">ADVANCED CAMERA SETTINGS</string>
    <string name="all_photos">All Photos</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_agree_message">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="applovin_alt_privacy_policy_text" />
    <string name="applovin_continue_button_text">Continue</string>
    <string name="applovin_creative_debugger_disabled_text">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="applovin_creative_debugger_no_ads_text">No recently displayed ads found.</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="applovin_pp_and_tos_title">To use %s you must agree to our Terms &amp; Conditions and affirm you have reviewed our Privacy Policy</string>
    <string name="applovin_pp_title">To use %s you must affirm that you have reviewed and acknowledged our Privacy Policy.</string>
    <string name="applovin_privacy_policy_text">Privacy Policy</string>
    <string name="applovin_terms_of_service_text">Terms &amp; Conditions</string>
    <string name="applovin_terms_of_use_text">Terms of Use</string>
    <string name="apps_made_by_artify">Apps made by Artify Inc.</string>
    <string name="artify_inc">Artify Inc.</string>
    <string name="back">Back</string>
    <string name="bio_authentication">Bio passcode (Touch ID, Face ID)</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="camera">Camera</string>
    <string name="camera_error">Device does not support camera api.</string>
    <string name="cameraview_default_autofocus_marker">com.otaliastudios.cameraview.markers.DefaultAutoFocusMarker</string>
    <string name="cameraview_filter_autofix">com.otaliastudios.cameraview.filters.AutoFixFilter</string>
    <string name="cameraview_filter_black_and_white">com.otaliastudios.cameraview.filters.BlackAndWhiteFilter</string>
    <string name="cameraview_filter_brightness">com.otaliastudios.cameraview.filters.BrightnessFilter</string>
    <string name="cameraview_filter_contrast">com.otaliastudios.cameraview.filters.ContrastFilter</string>
    <string name="cameraview_filter_cross_process">com.otaliastudios.cameraview.filters.CrossProcessFilter</string>
    <string name="cameraview_filter_documentary">com.otaliastudios.cameraview.filters.DocumentaryFilter</string>
    <string name="cameraview_filter_duotone">com.otaliastudios.cameraview.filters.DuotoneFilter</string>
    <string name="cameraview_filter_fill_light">com.otaliastudios.cameraview.filters.FillLightFilter</string>
    <string name="cameraview_filter_gamma">com.otaliastudios.cameraview.filters.GammaFilter</string>
    <string name="cameraview_filter_grain">com.otaliastudios.cameraview.filters.GrainFilter</string>
    <string name="cameraview_filter_grayscale">com.otaliastudios.cameraview.filters.GrayscaleFilter</string>
    <string name="cameraview_filter_hue">com.otaliastudios.cameraview.filters.HueFilter</string>
    <string name="cameraview_filter_invert_colors">com.otaliastudios.cameraview.filters.InvertColorsFilter</string>
    <string name="cancel_subscription">Cancel Subscription</string>
    <string name="confirm">Confirm</string>
    <string name="contact_us">Contact Us</string>
    <string name="content_description_text_align">Text Align</string>
    <string name="content_description_text_style">Text Style</string>
    <string name="done">Done</string>
    <string name="iap_content0">Premium Timestamps and Colors</string>
    <string name="iap_content1">No more Ads</string>
    <string name="iap_content2">Cancel at anytime</string>
    <string name="iap_footer">Subscription is automatically renewed every year unless canceled 24 hours in advance. Subscription fee will be charged to your Play Store account. You can manage your subscriptions and turn off automatic renewals in your Google Play/Settings. During the active period, cancellation of the current subscription is not allowed. By signing up, you are deemed to accept our Terms and Conditions, Privacy Policy and Subscription Policy.</string>
    <string name="iap_free_trial_7days">7 days Free Trial</string>
    <string name="iap_premium">Premium</string>
    <string name="iap_restore">Restore</string>
    <string name="iap_sku_description">After free trial %1$s/%2$s</string>
    <string name="in_app_purchase">IN APP PURCHASE</string>
    <string name="information">Information</string>
    <string name="key_timestamp">Timestamp</string>
    <string name="onboarding_segmentation_description">Select your areas of interest. (Multiple selection allowed)</string>
    <string name="onboarding_segmentation_title">What would you like to record?</string>
    <string name="rate_us">Rate Us</string>
    <string name="sample_date_text">March 10, 2019</string>
    <string name="sample_text">Hello World</string>
    <string name="sample_time_text">12:00 AM</string>
    <string name="settings_interests">Interests</string>
    <string name="settings_launch_camera_by_default">Launch Camera by Default</string>
    <string name="settings_personalization">Personalization</string>
    <string name="settings_save_captured">Save Captured</string>
    <string name="settings_save_captured_description">Save the unstamped original photo</string>
    <string name="settings_save_hd">Capture HD</string>
    <string name="settings_save_hd_description">There may be capture sounds</string>
    <string name="settings_save_immediately">Save Immediately</string>
    <string name="settings_save_immediately_description">Save the photo immediately without a stamp selection screen</string>
    <string name="settings_subscribe_premium">Subscribe Premium</string>
    <string name="sticker_trash_content_description">Remove Sticker</string>
    <string name="type_here">Type text here ...</string>
    <string name="visit_instagram">Visit Instagram</string>
    <string name="watermark">watermark</string>
    <string name="year_review_title">2025 Year Review</string>
</resources>