<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/base_settings" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/scroll_view" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:orientation="vertical" android:paddingTop="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <FrameLayout android:id="@id/ad_container" android:background="@color/base_settings" android:layout_width="match_parent" android:layout_height="wrap_content" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="42.0dp" android:layout_marginBottom="6.0dp" android:text="@string/advanced_camera_settings" android:layout_marginStart="24.0dp" style="@style/SettingSectionLabel" />
            <com.artifyapp.timestamp.view.widget.SettingItemView android:id="@id/item_camera_save_hd" android:layout_width="match_parent" android:layout_height="wrap_content" app:SettingItemView_description="@string/settings_save_hd_description" app:SettingItemView_label="@string/settings_save_hd" app:SettingItemView_position="top" app:SettingItemView_type="toggle" />
            <com.artifyapp.timestamp.view.widget.SettingItemView android:id="@id/item_camera_save_captured" android:layout_width="match_parent" android:layout_height="wrap_content" app:SettingItemView_description="@string/settings_save_captured_description" app:SettingItemView_label="@string/settings_save_captured" app:SettingItemView_position="middle" app:SettingItemView_type="toggle" />
            <com.artifyapp.timestamp.view.widget.SettingItemView android:id="@id/item_camera_save_immediately" android:layout_width="match_parent" android:layout_height="wrap_content" app:SettingItemView_description="@string/settings_save_immediately_description" app:SettingItemView_label="@string/settings_save_immediately" app:SettingItemView_position="middle" app:SettingItemView_type="toggle" />
            <com.artifyapp.timestamp.view.widget.SettingItemView android:id="@id/item_camera_on_launching" android:layout_width="match_parent" android:layout_height="wrap_content" app:SettingItemView_label="@string/settings_launch_camera_by_default" app:SettingItemView_position="bottom" app:SettingItemView_type="toggle" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="42.0dp" android:layout_marginBottom="6.0dp" android:text="@string/settings_personalization" android:layout_marginStart="24.0dp" style="@style/SettingSectionLabel" />
            <com.artifyapp.timestamp.view.widget.SettingItemView android:id="@id/item_interests" android:layout_width="match_parent" android:layout_height="wrap_content" app:SettingItemView_label="@string/settings_interests" app:SettingItemView_position="top" app:SettingItemView_type="info" />
            <com.artifyapp.timestamp.view.widget.SettingItemView android:id="@id/item_year_review" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" app:SettingItemView_label="@string/year_review_title" app:SettingItemView_position="bottom" app:SettingItemView_type="info" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="42.0dp" android:layout_marginBottom="6.0dp" android:text="@string/in_app_purchase" android:layout_marginStart="24.0dp" style="@style/SettingSectionLabel" />
            <com.artifyapp.timestamp.view.widget.SettingItemView android:id="@id/item_subscribe_premium" android:layout_width="match_parent" android:layout_height="wrap_content" app:SettingItemView_label="@string/settings_subscribe_premium" app:SettingItemView_position="top" app:SettingItemView_type="info" />
            <com.artifyapp.timestamp.view.widget.SettingItemView android:id="@id/item_cancel_subscription" android:layout_width="match_parent" android:layout_height="wrap_content" app:SettingItemView_label="@string/cancel_subscription" app:SettingItemView_position="bottom" app:SettingItemView_type="info" />
            <com.artifyapp.timestamp.view.widget.SettingItemBannerView android:id="@id/item_banner" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dp" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="42.0dp" android:layout_marginBottom="6.0dp" android:text="@string/information" android:layout_marginStart="24.0dp" style="@style/SettingSectionLabel" />
            <com.artifyapp.timestamp.view.widget.SettingItemView android:id="@id/item_contact_us" android:layout_width="match_parent" android:layout_height="wrap_content" app:SettingItemView_label="@string/contact_us" app:SettingItemView_position="top" app:SettingItemView_type="info" />
            <com.artifyapp.timestamp.view.widget.SettingItemView android:id="@id/item_visit_instagram" android:layout_width="match_parent" android:layout_height="wrap_content" app:SettingItemView_label="@string/visit_instagram" app:SettingItemView_position="middle" app:SettingItemView_type="info" />
            <com.artifyapp.timestamp.view.widget.SettingItemView android:id="@id/item_rate_us" android:layout_width="match_parent" android:layout_height="wrap_content" app:SettingItemView_label="@string/rate_us" app:SettingItemView_position="bottom" app:SettingItemView_type="info" />
            <TextView android:layout_gravity="center_horizontal" android:id="@id/item_copyright" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="42.0dp" android:layout_marginBottom="60.0dp" android:textAlignment="center" style="@style/SettingSectionLabel" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
