<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/stickerCanvas" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:id="@id/textEditBackgroundView" android:background="#80000000" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageButton android:id="@id/textAlignButton" android:background="#0000" android:padding="12.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/content_description_text_align" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@null" />
    <ImageView android:id="@id/textStyleButton" android:padding="12.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/content_description_text_style" app:layout_constraintStart_toEndOf="@id/textAlignButton" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@null" />
    <Button android:textSize="18.0sp" android:textColor="@android:color/white" android:id="@id/doneButton" android:background="@color/stickerCanvasDoneButtonBackground" android:padding="8.0dp" android:layout_width="wrap_content" android:layout_height="48.0dp" android:text="@string/done" android:textAllCaps="false" android:fontFamily="sans-serif-black" android:textAlignment="textEnd" android:backgroundTint="@color/stickerCanvasDoneButtonBackground" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <com.artifyapp.sticker.widget.STEditText android:textSize="24.0sp" android:textColor="@android:color/white" android:textColorHint="@color/stickerCanvasEditTextHint" android:gravity="center" android:id="@id/editText" android:background="#00000000" android:padding="12.0dp" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sample_text" android:hint="@string/type_here" android:singleLine="false" android:inputType="textMultiLine" android:imeOptions="flagNoFullscreen" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageButton android:id="@id/removeButton" android:background="#0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dp" android:src="@null" android:contentDescription="@string/sticker_trash_content_description" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
