<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button android:textSize="14.0sp" android:textColor="@color/onboarding_text_secondary" android:id="@id/restoreButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/iap_restore" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Widget.MaterialComponents.Button.TextButton" />
    <ImageButton android:id="@id/closeImageButton" android:background="?selectableItemBackgroundBorderless" android:padding="12.0dp" android:layout_width="48.0dp" android:layout_height="48.0dp" android:scaleType="centerInside" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@null" />
    <ScrollView android:id="@id/scrollView" android:scrollbars="none" android:layout_width="0.0dp" android:layout_height="0.0dp" android:fillViewport="true" app:layout_constraintBottom_toTopOf="@id/bottomContainer" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/closeImageButton">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/titleContainer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
                <TextView android:textSize="40.0sp" android:textColor="@color/onboarding_text_primary" android:id="@id/subscribe_label_timestamp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/key_timestamp" android:textAllCaps="true" android:fontFamily="@font/helvetica_neue_condensed_bold" />
                <TextView android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/subscribe_label_premium" android:background="@drawable/background_premium_badge" android:paddingTop="4.0dp" android:paddingBottom="6.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:text="@string/iap_premium" android:fontFamily="@font/helvetica_neue_condensed_bold" android:paddingStart="16.0dp" android:paddingEnd="16.0dp" />
            </LinearLayout>
            <androidx.cardview.widget.CardView android:id="@id/benefitsCard" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="32.0dp" android:layout_marginStart="24.0dp" android:layout_marginEnd="24.0dp" app:cardBackgroundColor="@color/onboarding_subscribe_primary_light" app:cardCornerRadius="16.0dp" app:cardElevation="0.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/titleContainer">
                <LinearLayout android:orientation="vertical" android:padding="24.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="15.0sp" android:textColor="@color/onboarding_text_primary" android:gravity="center_vertical" android:id="@id/textView8" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/iap_content0" android:drawablePadding="16.0dp" android:drawableStart="@drawable/ic_check_circle_blue" android:fontFamily="sans-serif-medium" />
                    <View android:background="#20000000" android:layout_width="match_parent" android:layout_height="1.0dp" android:layout_marginTop="16.0dp" android:layout_marginBottom="16.0dp" />
                    <TextView android:textSize="15.0sp" android:textColor="@color/onboarding_text_primary" android:gravity="center_vertical" android:id="@id/textView11" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/iap_content1" android:drawablePadding="16.0dp" android:drawableStart="@drawable/ic_check_circle_blue" android:fontFamily="sans-serif-medium" />
                    <View android:background="#20000000" android:layout_width="match_parent" android:layout_height="1.0dp" android:layout_marginTop="16.0dp" android:layout_marginBottom="16.0dp" />
                    <TextView android:textSize="15.0sp" android:textColor="@color/onboarding_text_primary" android:gravity="center_vertical" android:id="@id/textView12" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/iap_content2" android:drawablePadding="16.0dp" android:drawableStart="@drawable/ic_check_circle_blue" android:fontFamily="sans-serif-medium" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/bottomContainer" android:layout_width="0.0dp" android:layout_height="wrap_content" android:paddingStart="24.0dp" android:paddingEnd="24.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <androidx.appcompat.widget.AppCompatButton android:textSize="17.0sp" android:textColor="@color/white" android:id="@id/subscribe_button" android:background="@drawable/background_subscribe_button" android:layout_width="match_parent" android:layout_height="56.0dp" android:text="@string/iap_free_trial_7days" android:textAllCaps="false" android:fontFamily="sans-serif-medium" android:stateListAnimator="@null" android:letterSpacing="0.02" />
        <TextView android:textSize="14.0sp" android:textColor="@color/onboarding_text_secondary" android:id="@id/skuDescriptionTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dp" android:text="@string/iap_sku_description" />
        <TextView android:textSize="11.0sp" android:textColor="@color/onboarding_text_secondary" android:id="@id/footerTextView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dp" android:text="@string/iap_footer" android:lineSpacingExtra="2.0dp" android:textAlignment="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
