<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/background_bottom_sheet" android:paddingLeft="24.0dp" android:paddingTop="24.0dp" android:paddingRight="24.0dp" android:paddingBottom="24.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingHorizontal="24.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:layout_gravity="center_horizontal" android:background="@drawable/background_bottom_sheet_handle" android:layout_width="40.0dp" android:layout_height="4.0dp" android:layout_marginBottom="20.0dp" />
    <TextView android:textSize="20.0sp" android:textColor="@color/onboarding_text_primary" android:gravity="center" android:id="@id/title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/onboarding_segmentation_title" android:fontFamily="sans-serif-medium" android:letterSpacing="-0.02" />
    <TextView android:textSize="14.0sp" android:textColor="@color/onboarding_text_secondary" android:gravity="center" android:id="@id/description" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:text="@string/onboarding_segmentation_description" />
    <LinearLayout android:orientation="vertical" android:id="@id/optionsContainer" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dp" />
    <androidx.appcompat.widget.AppCompatButton android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/confirmButton" android:background="@drawable/background_onboarding_button" android:layout_width="match_parent" android:layout_height="52.0dp" android:layout_marginTop="24.0dp" android:text="@string/confirm" android:textAllCaps="false" android:fontFamily="sans-serif-medium" android:stateListAnimator="@null" />
</LinearLayout>
