<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textSize="76.0sp" android:textColor="@color/white" android:id="@id/timeTextView" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/sample_time_text" android:shadowColor="@color/colorShadowDefault" android:shadowRadius="4.0" android:fontFamily="@font/nanum_barunpen_regular" android:textAlignment="center" />
        <TextView android:textSize="20.0sp" android:textColor="@color/white" android:id="@id/dateTextView" android:paddingTop="12.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/sample_date_text" android:shadowColor="@color/colorShadowDefault" android:shadowRadius="4.0" android:fontFamily="@font/nanum_barunpen_regular" android:textAlignment="center" />
    </LinearLayout>
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline16" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.936" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guideline17" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.94133" />
    <ImageView android:id="@id/watermarkImageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/watermark" app:layout_constraintBottom_toTopOf="@id/guideline17" app:layout_constraintEnd_toStartOf="@id/guideline16" app:srcCompat="@null" />
</androidx.constraintlayout.widget.ConstraintLayout>
